--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,7 +1,7 @@
 %gotham-light {
   font-family: 'Gotham Light';
 }
-%gotham-medium {
+%gotham-book {
   font-family: 'Gotham Book';
 }
 %gotham-medium{
