--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top -70px center;
+  color: #fff;
   &__top{
     display: flex;
     justify-content: space-between;
@@ -76,8 +77,6 @@
   }
   &__bottom-descr{
     margin-top: 30px;
-    font-size: 14px;
-    line-height: 16px;
     color: rgba(#fff, .5);
   }
 }
@@ -103,7 +102,89 @@
     }
   }
 }
-
+.benefits{
+  &__top{
+    text-align: center;
+  }
+  &__title{
+    font-size: 50px;
+    line-height: 52px;
+  }
+  &__text{
+    font-size: 20px;
+    line-height: 22px;
+    color: #918f89;
+    margin-top: -30px;
+  }
+  &__list{
+    margin-top: 65px;
+    padding-bottom: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
+    &::before,
+    &::after{
+      position: absolute;
+      content: "";
+      transform: translateX(-50%);
+      left: 50%;
+      background-color: #e5e2db;
+    }
+    &::before{
+      bottom: 5px;
+      width: 840px;
+      height: 2px;
+    }
+    &::after{
+      width: 140px;
+      height: 10px;
+      bottom: 0;
+      border-radius: 25px;
+    }
+  }
+  &__bottom{
+    margin: 80px 0;
+  }
+  &__bottom-inner{
+    display: flex;
+    justify-content: space-between;
+  }
+  &__bottom-list__item{
+    @extend %gotham-book;
+    padding-left: 36px;
+    position: relative;
+    span {
+      @extend %gotham-bold;
+    }
+    &::before{
+      content: "";
+      position: absolute;
+      left: 2px;
+      background-image: url('../images/benefits__list-before.png');
+      width: 20px;
+      height: 18px;
+    }
+    & + & {
+      margin-top: 30px;
+    }
+  }
+  &__btn-link{
+    padding: 21px 40px;
+    color: #fff;
+    background-color: #5f94ff;
+  }
+  &__btn{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  &__descr{
+    margin-top: 30px;
+    color: #d7d4cd;
+  }
+}
 
 
 
