--- a/scss/style.scss
+++ b/scss/style.scss
@@ -104,9 +104,7 @@
   }
 }
 .benefits{
-  position: relative;
-  &__bg-image{
-    position: absolute;
+  &__image-bg{
     right: 53px;
     top: -285px;
   }
@@ -134,6 +132,7 @@
   }
   &__top-textarea{
     max-width: 645px;
+    margin: 0 auto;
   }
   &__title{
     font-size: 50px;
@@ -224,9 +223,7 @@
   background-size: 100% 100%;
   background-repeat: no-repeat;
   margin-bottom: -25px;
-  position: relative;
-  &__bg-image{
-    position: absolute;
+  &__image-bg{
     top: -215px;
     left: 157px;
   }
@@ -285,9 +282,7 @@
 }
 .types {
   margin-top: 82px;
-  position: relative;
-  &__images-bg {
-    position: absolute;
+  &__image-bg {
     right: 135px;
     top: 330px;
     z-index: 5;
@@ -308,13 +303,13 @@
     &::before {
       width: 40px;
       background-color: #5f94ff;
-      left: 185px;
+      left: 205px;
     }
 
     &::after {
       width: 80px;
       background-color: #9ecb45;
-      right: 187px;
+      right: 205px;
     }
   }
   &__title {
@@ -668,15 +663,12 @@
       bottom: 0;
     }
   }
-
   &__trial {
     text-align: center;
   }
-
   &__trial-btn {
-    margin-bottom: 27px;
+    margin: 45px 0 27px;
   }
-
   &__trial-btn__link {
     padding: 21px 43px 22px 40px;
     color: #fff;
@@ -725,8 +717,53 @@
     animation: fade .3s;
   }
 }
-
-
+.footer{
+  margin-top: 100px;
+  background-image: url('../images/footer-bg.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 150px 0 100px;
+  color: #ffb4bc;
+  &__image-bg{
+    top: -280px;
+    left: 100px;
+  }
+  &__inner{
+    max-width: 1050px;
+    margin: 0 auto;
+    text-align: center;
+  }
+  &__list{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
+  }
+  &__list-item{
+    position: relative;
+    &::before{
+      position: absolute;
+      content: "";
+      left: 0;
+      width: 4px;
+      height: 4px;
+      background-color: #ffb4bc;
+      border-radius: 50%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    & + & {
+      padding-left: 23px;
+      margin-left: 21px;
+    }
+  }
+  &__copy{
+    margin-top: -3px;
+  }
+}
+.footer__list-item.footer__list-item--active{
+  color: #fff;
+}
 
 
 
